# UltReality_Core

./: CMakeLists.txt
Managers/: CMakeLists.txt
Managers/Configuration/include/: ConfigurationManager.h  RendererConfig.h
Managers/Configuration/src/: ConfigurationManager.cpp
Managers/IO/include/: PlatformMessageManager.h
Managers/IO/src/: PlatformMessageManager.cpp
Managers/cmake_config/: UltReality_Managers.pc.in  UltReality_Managers_Config.cmake.in
